--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
   "devDependencies": {
     "@capacitor/cli": "^4.6.3",
     "@types/react-modal": "^3.13.1",
-    "copyfiles": "^2.4.1"
+    "copyfiles": "^2.4.1",
+    "prettier": "3.0.0"
   },
   "repository": {
     "type": "git",
